fix image alignment issues in base

--- a/content/themes/tribe-square-one/css/admin/editor-style.css
+++ b/content/themes/tribe-square-one/css/admin/editor-style.css
@@ -363,10 +363,15 @@ input[type="radio"],input[type="checkbox"] {
   margin-bottom: 0;
 }
 
+img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .wp-image-wrap,.wp-caption {
   width: auto !important;
   max-width: none;
-  margin: 0 -25px;
+  margin: 0 auto;
 }
 
 .wp-caption-text {
@@ -378,11 +383,6 @@ input[type="radio"],input[type="checkbox"] {
 .aligncenter,.alignnone {
   margin-top: 50px;
   margin-bottom: 50px;
-}
-
-.aligncenter img,.alignnone img {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .alignleft,.alignright {
@@ -645,11 +645,6 @@ img.alignleft,img.alignright {
 
   .quote,.context-content q,body q,.blockquote p,.context-content blockquote p,body blockquote p {
     font-size: 32px;
-  }
-
-  .wp-image-wrap,.wp-caption {
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .alignleft,.alignright {
