--- a/content/themes/tribe-square-one/css/legacy.css
+++ b/content/themes/tribe-square-one/css/legacy.css
@@ -459,16 +459,15 @@ td {
 input[type="radio"], input[type="checkbox"] {
   margin-bottom: 0; }
 
+img {
+  margin-left: auto;
+  margin-right: auto; }
+
 .wp-image-wrap,
 .wp-caption {
   width: auto !important;
   max-width: none;
-  margin: 0 -25px; }
-  @media (min-width: 768px) {
-    .wp-image-wrap,
-    .wp-caption {
-      margin-left: auto;
-      margin-right: auto; } }
+  margin: 0 auto; }
 
 .wp-caption-text {
   margin: 15px 0 0;
@@ -479,10 +478,6 @@ input[type="radio"], input[type="checkbox"] {
 .alignnone {
   margin-top: 50px;
   margin-bottom: 50px; }
-  .aligncenter img,
-  .alignnone img {
-    margin-left: auto;
-    margin-right: auto; }
 
 .alignleft,
 .alignright {
