--- a/content/themes/tribe-square-one/scss/style-guide/base/_media.scss
+++ b/content/themes/tribe-square-one/scss/style-guide/base/_media.scss
@@ -5,16 +5,17 @@
 //
 // -----------------------------------------------------------------------------
 
+img {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 // Media Wrappers
 .wp-image-wrap,
 .wp-caption {
 	width: auto !important;
 	max-width: none;
-	margin: 0 -25px;
-	@include mq($mq-medium) {
-		margin-left: auto;
-		margin-right: auto;
-	}
+	margin: 0 auto;
 }
 
 // Caption: Caption
@@ -29,10 +30,6 @@
 .alignnone {
 	margin-top: $spacer-lg;
 	margin-bottom: $spacer-lg;
-	img {
-		margin-left: auto;
-		margin-right: auto;
-	}
 }
 
 .alignleft,
